--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "simplicity-workflow",
-  "version": "1.1.1",
+  "name": "ninuo-workflow-ui",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/go-workflow/go-workflow-UI.git"
+    "url": "git+https://github.com/Jianguoqd/workflow.git"
   },
-  "main": "lib/simplicity-workflow.common.js",
+  "main": "lib/ninuo-workflow-ui.common.js",
   "files": [
     "src/",
     "lib/"
